# CPP-WASM-Template

./: CMakeLists.txt  README.md
include/project_mvc/: model.h  my_view.h
include/project_template/: model_interface.h  my_view.h  view.h
include/project_utils/: hermes.h
lib/: build_local.sh  debug_local.sh  release_local.sh  run_web.sh
src/project_mvc/: controller.cpp  model.cpp  my_view.cpp
src/project_template/: main.cpp  view.cpp
